--- a/css/style.css
+++ b/css/style.css
@@ -7816,7 +7816,6 @@ span.ovrly_text2 {
     grid-template-columns: 1fr;
     padding: 100px 0 !important;
     height: auto;
-    background-color: #000;
   }
 
   .main_slider_wrapper {
@@ -7862,6 +7861,63 @@ span.ovrly_text2 {
     height: auto;
   }
 }
+
+
+@media (min-width: 768px) {
+  #blog-container {
+    grid-template-columns: 1fr;
+    height: 100%;
+    padding: 80px 0 !important;
+    background-color: #000;
+  }
+
+  .main_slider_wrapper {
+    height: auto; /* Preenche 100% da altura da tela */
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start; /* Garante que o conteúdo fique no topo */
+    flex-direction: column;
+    margin-top: -600px !important; /* Remove a margem superior */
+    padding: 0 !important;
+    background-color: #0f0e37; /* Cor de fundo */
+  }
+
+  .slider-content {
+    width: 100%; /* Garante que a imagem ocupe toda a largura do slider */
+    padding: 30px;
+  }
+
+  .slider-img {
+    width: 100%; /* Garante que a imagem ocupe toda a largura do slider */
+    height: auto; /* Mantém a proporção da imagem */
+    object-fit: contain; /* Preenche o container sem distorcer a imagem */
+  }
+
+  .carousel-captions {
+    position: absolute;
+    top: 20%; /* Ajusta a posição do texto para um pouco abaixo do topo */
+    left: 50%;
+    transform: translate(-50%, 0);
+    text-align: center;
+    color: white; /* Exibe os textos em branco */
+  }
+
+  .carousel-captions h1, .carousel-captions h2, .carousel-captions p {
+    font-size: 3rem; /* Aumenta o tamanho da fonte para a resolução grande */
+  }
+
+  .carousel-item {
+    position: relative;
+    height: 100vh; /* Cada item do carousel ocupa 100% da altura da tela */
+  }
+
+  .carousel-item.active .slider-img {
+    width: 100%;
+    height: auto;
+  }
+}
+
+
 
 /* Categoria do post */
 .custom-category {
